--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,8 +100,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Maps/mateneeTest
-MRUItem1=/Game/Maps/TempleBlockOut
+MRUItem0=/Game/Maps/TempleBlockOut
+MRUItem1=/Game/Maps/mateneeTest
 MRUItem2=/Game/Maps/MainMenu
 
 [EditorStartup]
@@ -111,22 +111,22 @@ LastLevel=/Game/Maps/TempleBlockOut
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/bp_matine/sq_test
-MRUItem1=/Game/Maps/mateneeTest
-MRUItem2=/Game/Blueprints/AI/bp_fistAI_02
-MRUItem3=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem4=/Game/Blueprints/AI/bp_fistAI
-MRUItem5=/Game/Particles/p_blast
-MRUItem6=/Game/Blueprints/Projectiles/BP_playerProjectile
-MRUItem7=/Game/Materials/Mat_Cloud
-MRUItem8=/Game/Blueprints/Projectiles/BP_fistProjectile
-MRUItem9=/Game/Blueprints/enums/Attack_Active
-MRUItem10=/Game/Anims/Player/mon_player_blockedAnimation
-MRUItem11=/Game/sfx/Disco_Inferno
-MRUItem12=/Game/Materials/NewMaterial
-MRUItem13=/Game/Blueprints/CharacterBP/bp_fistCharacter
-MRUItem14=/Game/Blueprints/bp_PitTrigger
-MRUItem15=/Game/Blueprints/MetricListener/Listener
+MRUItem0=/Game/Blueprints/MetricListener/Listener
+MRUItem1=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem2=/Game/Blueprints/bp_matine/sq_test
+MRUItem3=/Game/Maps/mateneeTest
+MRUItem4=/Game/Blueprints/AI/bp_fistAI_02
+MRUItem5=/Game/Blueprints/AI/bp_fistAI
+MRUItem6=/Game/Particles/p_blast
+MRUItem7=/Game/Blueprints/Projectiles/BP_playerProjectile
+MRUItem8=/Game/Materials/Mat_Cloud
+MRUItem9=/Game/Blueprints/Projectiles/BP_fistProjectile
+MRUItem10=/Game/Blueprints/enums/Attack_Active
+MRUItem11=/Game/Anims/Player/mon_player_blockedAnimation
+MRUItem12=/Game/sfx/Disco_Inferno
+MRUItem13=/Game/Materials/NewMaterial
+MRUItem14=/Game/Blueprints/CharacterBP/bp_fistCharacter
+MRUItem15=/Game/Blueprints/bp_PitTrigger
 MRUItem16=/Game/Blueprints/Data/Data_Fists_hitValues
 MRUItem17=/Game/Blueprints/Data/Data_Staff_hitValues
 MRUItem18=/Game/Anims/FIst/mon_fighter_G_lATK01
@@ -1636,7 +1636,6 @@ MaterialExpressionTextureObjectParameter.MaterialExpression=True
 MaterialExpressionReroute.MaterialExpression=True
 MaterialExpressionConstant2Vector.MaterialExpressionConstant2Vector=True
 MaterialExpressionConstant2Vector.MaterialExpression=True
-
 BlueprintEditorSettings.Experimental=True
 RectLight.TransformCommon=True
 RectLight.Light=True
@@ -1705,6 +1704,43 @@ Actor.Rendering=True
 Actor.Geometry=True
 Actor.Surface Properties=True
 Actor.Input=True
+REINST_bp_fistCharacter_C_94.TransformCommon=True
+REINST_bp_fistCharacter_C_94.Animation=True
+REINST_bp_fistCharacter_C_94.Mesh=True
+REINST_bp_fistCharacter_C_94.None=True
+REINST_bp_fistCharacter_C_94.Physics=True
+REINST_bp_fistCharacter_C_94.Clothing=True
+REINST_bp_fistCharacter_C_94.Collision=True
+REINST_bp_fistCharacter_C_94.Lighting=True
+REINST_bp_fistCharacter_C_94.ClothingSimulation=True
+REINST_bp_fistCharacter_C_94.Rendering=True
+REINST_bp_fistCharacter_C_94.Tags=True
+REINST_bp_fistCharacter_C_94.Activation=True
+REINST_bp_fistCharacter_C_94.Cooking=True
+REINST_bp_fistCharacter_C_94.Character Movement: Jumping / Falling=True
+REINST_bp_fistCharacter_C_94.Character Movement (General Settings)=True
+REINST_bp_fistCharacter_C_94.Character Movement: Walking=True
+REINST_bp_fistCharacter_C_94.Character Movement: Swimming=True
+REINST_bp_fistCharacter_C_94.Character Movement: Flying=True
+REINST_bp_fistCharacter_C_94.Character Movement: Custom Movement=True
+REINST_bp_fistCharacter_C_94.Character Movement (Rotation Settings)=True
+REINST_bp_fistCharacter_C_94.Character Movement: Physics Interaction=True
+REINST_bp_fistCharacter_C_94.Character Movement (Networking)=True
+REINST_bp_fistCharacter_C_94.Character Movement=True
+REINST_bp_fistCharacter_C_94.Character Movement: Avoidance=True
+REINST_bp_fistCharacter_C_94.Character Movement: NavMesh Movement=True
+REINST_bp_fistCharacter_C_94.RootMotion=True
+REINST_bp_fistCharacter_C_94.NavMovement=True
+REINST_bp_fistCharacter_C_94.Velocity=True
+REINST_bp_fistCharacter_C_94.PlanarMovement=True
+REINST_bp_fistCharacter_C_94.MovementComponent=True
+REINST_bp_fistCharacter_C_94.Shape=True
+REINST_bp_fistCharacter_C_94.Navigation=True
+REINST_bp_fistCharacter_C_94.Character=True
+REINST_bp_fistCharacter_C_94.Camera=True
+REINST_bp_fistCharacter_C_94.Pawn=True
+REINST_bp_fistCharacter_C_94.Input=True
+REINST_bp_fistCharacter_C_94.Actor=True
 
 [RootWindow]
 ScreenPosition=X=1001.000 Y=108.000
@@ -2627,11 +2663,9 @@ LastLogListing=PIE
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-
-bp_baseCharacter_C="\"Object.currentState\" \"Object.currentState\" "
-Character="\"Object.currentState\" \"Object.currentState\" "
-Pawn="\"Object.currentState\" \"Object.currentState\" "
-
+bp_baseCharacter_C="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+Character="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+Pawn="\"Object.ANimation.DashAnimations\" \"Object.ANimation.lATK_G_Animations\" \"Object.ANimation.lATK_A_Animations\" \"Object.ANimation.hATK_G_Animations\" \"Object.ANimation.hATK_A_Animations\" \"Object.Inputs.Actions\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
@@ -2758,6 +2792,8 @@ EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Obje
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.Categories.Categories[0]\" \"Object.Tutorials.Categories.Categories[1]\" \"Object.Tutorials.Categories.Categories[2]\" \"Object.Tutorials.Categories.Categories[3]\" \"Object.Tutorials.Categories.Categories[4]\" \"Object.Tutorials.Categories.Categories[5]\" \"Object.Tutorials.Categories.Categories[6]\" \"Object.Tutorials.Categories.Categories[7]\" \"Object.Tutorials.Categories.Categories[8]\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[11]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[12]\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.Pow2GridSizes\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.GridSnapping.ScalingGridSizes\" \"Object.Preview.PreviewMeshes\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" \"Object.MiscAutomationSetups.TestLevelFolders\" "
+REINST_bp_fistCharacter_C_94="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+REINST_bp_baseCharacter_C_93="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2775,7 +2811,6 @@ Brush.BrushSettings=True
 Brush.Geometry=True
 StaticMeshActor.Collision=True
 EditorNotifyObject.AnimLink=True
-
 MovieSceneEventSection.Section=False
 
 [PlacementMode]
