--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -110,11 +110,12 @@ LastLevel=/Game/Maps/TempleBlockOut
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
+OpenAssetsAtExit=/Game/Blueprints/MetricListener/Listener.Listener
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/MetricListener/Listener
-MRUItem1=/Game/Blueprints/Instance/gameInfo_instance
-MRUItem2=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem1=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem2=/Game/Blueprints/Instance/gameInfo_instance
 MRUItem3=/Game/Blueprints/AI/bp_fistAI_02
 MRUItem4=/Game/Blueprints/bp_matine/sq_test
 MRUItem5=/Game/Maps/mateneeTest
@@ -340,7 +341,7 @@ bp_baseCharacter_C.states=True
 bp_baseCharacter_C.Camera=True
 bp_baseCharacter_C.Animation=False
 bp_baseCharacter_C.References=True
-bp_baseCharacter_C.Particles=True
+bp_baseCharacter_C.Particles=False
 bp_baseCharacter_C.Dash=True
 bp_baseCharacter_C.Snap=True
 bp_baseCharacter_C.CharacterValues=True
@@ -644,7 +645,7 @@ bp_baseCharacter_C.Mesh=True
 bp_baseCharacter_C.Materials=True
 bp_baseCharacter_C.Clothing=True
 bp_baseCharacter_C.ClothingSimulation=True
-bp_baseCharacter_C.Physics=True
+bp_baseCharacter_C.Physics=False
 bp_baseCharacter_C.Collision=True
 bp_baseCharacter_C.Lighting=True
 bp_baseCharacter_C.Tags=True
@@ -1744,6 +1745,15 @@ REINST_bp_fistCharacter_C_94.Input=True
 REINST_bp_fistCharacter_C_94.Actor=True
 gameInfo_instance_C.Player Metrics=True
 gameInfo_instance_C.Enemy Metrics=True
+REINST_bp_baseCharacter_C_987.None=True
+REINST_bp_baseCharacter_C_987.Tick=True
+REINST_bp_baseCharacter_C_987.Character=True
+REINST_bp_baseCharacter_C_987.Camera=True
+REINST_bp_baseCharacter_C_987.Pawn=True
+REINST_bp_baseCharacter_C_987.Rendering=True
+REINST_bp_baseCharacter_C_987.Replication=True
+REINST_bp_baseCharacter_C_987.Input=True
+REINST_bp_baseCharacter_C_987.Actor=True
 
 [RootWindow]
 ScreenPosition=X=1011.000 Y=806.000
@@ -1774,7 +1784,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Instance
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/MetricListener
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2668,14 +2678,14 @@ LastLogListing=PIE
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
-bp_baseCharacter_C="\"Object.character\" \"Object.character\" "
-Character="\"Object.character\" \"Object.character\" "
-Pawn="\"Object.character\" \"Object.character\" "
+bp_baseCharacter_C=
+Character=
+Pawn=
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C="\"Object.Character\" \"Object.Character\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
-DeveloperSettings=
+DeveloperSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" "
 AnimationSettings="\"Object.Compression.KeyEndEffectorsMatchNameArray\" "
 AudioSettings="\"Object.Quality.QualityLevels\" \"Object.Quality.QualityLevels.QualityLevels[0]\" "
 ConsoleSettings="\"Object.AutoComplete.ManualAutoCompleteList\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[0]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[1]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[2]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[3]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[4]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[5]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[6]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[7]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[8]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[9]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[10]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[11]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[12]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[13]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[14]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[15]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[16]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[17]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[18]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[19]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[20]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[21]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[22]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[23]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[24]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[25]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[26]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[27]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[28]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[29]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[30]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[31]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[32]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[33]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[34]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[35]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[36]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[37]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[38]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[39]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[40]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[41]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[42]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[43]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[44]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[45]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[46]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[47]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[48]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[49]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[50]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[51]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[52]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[53]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[54]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[55]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[56]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[57]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[58]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[59]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[60]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[61]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[62]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[63]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[64]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[65]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[66]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[67]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[68]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[69]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[70]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[71]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[72]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[73]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[74]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[75]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[76]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[77]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[78]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[79]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[80]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[81]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[82]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[83]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[84]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[85]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[86]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[87]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[88]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[89]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[90]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[91]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[92]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[93]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[94]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[95]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[96]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[97]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[98]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[99]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[100]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[101]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[102]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[103]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[104]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[105]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[106]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[107]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[108]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[109]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[110]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[111]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[112]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[113]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[114]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[115]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[116]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[117]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[118]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[119]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[120]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[121]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[122]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[123]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[124]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[125]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[126]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[127]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[128]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[129]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[130]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[131]\" \"Object.AutoComplete.ManualAutoCompleteList.ManualAutoCompleteList[132]\" \"Object.AutoComplete.AutoCompleteMapPaths\" "
@@ -2788,8 +2798,8 @@ REINST_bp_fistCharacter_C_838="\"Object.Character\" \"Object.Character.Mesh.Obje
 bp_PitTrigger_C=
 TriggerBox=
 TriggerBase=
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+StaticMeshComponent=
+MeshComponent=
 PrimitiveComponent=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
@@ -2801,7 +2811,7 @@ REINST_bp_fistCharacter_C_94="\"Object.Character\" \"Object.Character.Mesh.Objec
 REINST_bp_baseCharacter_C_93="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 gameInfo_instance_C=
 GameInstance=
-Listener_C="\"Object.gameInfo_ref\" \"Object.gameInfo_ref\" "
+Listener_C=
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
