Tiny changes just to have them commited when creating the branch.
Added the mid-fight transition function to the event tick group and added a variable for raycast angle.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -110,11 +110,10 @@ LastLevel=/Game/Maps/TempleBlockOut
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/CharacterBP/bp_baseCharacter.bp_baseCharacter
-OpenAssetsAtExit=/Game/Blueprints/MetricListener/Listener.Listener
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/MetricListener/Listener
-MRUItem1=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem0=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem1=/Game/Blueprints/MetricListener/Listener
 MRUItem2=/Game/Blueprints/Instance/gameInfo_instance
 MRUItem3=/Game/Blueprints/AI/bp_fistAI_02
 MRUItem4=/Game/Blueprints/bp_matine/sq_test
@@ -1754,6 +1753,7 @@ REINST_bp_baseCharacter_C_987.Rendering=True
 REINST_bp_baseCharacter_C_987.Replication=True
 REINST_bp_baseCharacter_C_987.Input=True
 REINST_bp_baseCharacter_C_987.Actor=True
+bp_baseCharacter_C.Midfight Transition=True
 
 [RootWindow]
 ScreenPosition=X=1011.000 Y=806.000
@@ -1784,7 +1784,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/MetricListener
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/CharacterBP
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
