--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,38 +105,39 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/Maps/BlockOut
-MRUItem1=/Game/Maps/CharacterTest
+MRUItem1=/Game/Maps/BlockOutExport
 MRUItem2=/Game/Maps/TempleBlockOut
-MRUItem3=/Game/Maps/MainMenu
-MRUItem4=/Game/Maps/mateneeTest
+MRUItem3=/Game/Maps/CharacterTest
+MRUItem4=/Game/Maps/MainMenu
+MRUItem5=/Game/Maps/mateneeTest
 
 [EditorStartup]
-LastLevel=/Game/Maps/TempleBlockOut
+LastLevel=/Game/Maps/BlockOut
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Meshes/Structure1Mesh
-MRUItem1=/Game/Maps/BlockOut
-MRUItem2=/Game/UI/W_inGameHud
-MRUItem3=/Game/Blueprints/CharacterBP/curve_finisher
-MRUItem4=/Game/Anims/Bonnie/abp_bonnie
-MRUItem5=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
-MRUItem6=/Game/Anims/Player/mon_player_dashFInisher
-MRUItem7=/Game/Anims/Bonnie/Char/mon_bonnie_finisherDash
-MRUItem8=/Game/Anims/Bonnie/Char/mon_bonnie_dashF
-MRUItem9=/Game/Anims/Bonnie/Char/a_bonnie_dashF_act
-MRUItem10=/Game/Anims/Bonnie/Char/a_bonnie_dashF_end
-MRUItem11=/Game/Anims/Bonnie/Char/a_bonnie_dashF_str
-MRUItem12=/Game/Blueprints/Data/Data_Bonnie_hitValues
-MRUItem13=/Game/Maps/CharacterTest
-MRUItem14=/Game/Blueprints/CharacterBP/bp_baseCharacter
-MRUItem15=/Game/Blueprints/CharacterBP/bp_baseChar
-MRUItem16=/Game/Anims/Bonnie/Char/mon_bonnie_finisher
-MRUItem17=/Game/Anims/Bonnie/Char/a_bonnie_finisher
-MRUItem18=/Game/Blueprints/Data/Data_Fists_hitValues
-MRUItem19=/Game/Blueprints/CharacterBP/bp_baseEnemy
+MRUItem0=/Game/Maps/BlockOut
+MRUItem1=/Game/Maps/BlockOutExport
+MRUItem2=/Game/Maps/TempleBlockOut
+MRUItem3=/Game/Meshes/Structure1Mesh
+MRUItem4=/Game/UI/W_inGameHud
+MRUItem5=/Game/Blueprints/CharacterBP/curve_finisher
+MRUItem6=/Game/Anims/Bonnie/abp_bonnie
+MRUItem7=/Game/Blueprints/AnimationBP/ABP_PlayerCharacter
+MRUItem8=/Game/Anims/Player/mon_player_dashFInisher
+MRUItem9=/Game/Anims/Bonnie/Char/mon_bonnie_finisherDash
+MRUItem10=/Game/Anims/Bonnie/Char/mon_bonnie_dashF
+MRUItem11=/Game/Anims/Bonnie/Char/a_bonnie_dashF_act
+MRUItem12=/Game/Anims/Bonnie/Char/a_bonnie_dashF_end
+MRUItem13=/Game/Anims/Bonnie/Char/a_bonnie_dashF_str
+MRUItem14=/Game/Blueprints/Data/Data_Bonnie_hitValues
+MRUItem15=/Game/Maps/CharacterTest
+MRUItem16=/Game/Blueprints/CharacterBP/bp_baseCharacter
+MRUItem17=/Game/Blueprints/CharacterBP/bp_baseChar
+MRUItem18=/Game/Anims/Bonnie/Char/mon_bonnie_finisher
+MRUItem19=/Game/Anims/Bonnie/Char/a_bonnie_finisher
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2894,7 +2895,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2927,7 +2928,7 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [Directories2]
-UNR=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringerAlpha/Content/Maps
+UNR=../../../../../projects/lightb/LightBringerAlpha/Content/Maps
 BRUSH=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 FBX=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
 FBXAnim=../../../../../../Users/Chris Justo/Documents/Unreal Projects/LightBringer_Alpha/Content/
@@ -3553,9 +3554,9 @@ SceneOutliner.TimeStamp=2019.09.06-02.30.07
 SceneOutliner.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2019.09.06-02.30.03
 HierarchicalLODOutliner.LastCompileMethod=External
-Voice.TimeStamp=2019.03.18-07.54.56
+Voice.TimeStamp=2019.09.06-02.30.08
 Voice.LastCompileMethod=External
-MovieSceneCapture.TimeStamp=2019.03.18-07.53.09
+MovieSceneCapture.TimeStamp=2019.09.06-02.30.05
 MovieSceneCapture.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2019.03.18-07.52.01
 ExternalImagePicker.LastCompileMethod=External
@@ -3589,8 +3590,8 @@ AnalyticsBlueprintLibrary.TimeStamp=2019.09.06-02.38.16
 AnalyticsBlueprintLibrary.LastCompileMethod=External
 FileLogging.TimeStamp=2019.09.06-02.38.16
 FileLogging.LastCompileMethod=External
-Analytics.TimeStamp=2019.03.18-07.50.28
-Analytics.LastCompileMethod=Unknown
+Analytics.TimeStamp=2019.09.06-02.30.00
+Analytics.LastCompileMethod=External
 CurveAssetEditor.TimeStamp=2018.10.07-02.07.57
 CurveAssetEditor.LastCompileMethod=Unknown
 
@@ -3852,15 +3853,15 @@ W_inGameHud_C=K2Node_VariableGet.DefaultValueCategory.None,bp_baseCharacter_C.Ph
 /Game/Meshes/Structure1Mesh.Structure1Mesh=1
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Object=
 bp_baseCharacter_C="\"Object.DataTableInfo\" \"Object.DataTableInfo.DataTableInfo[12]\" \"Object.DataTableInfo.DataTableInfo[13]\" \"Object.DataTableInfo\" \"Object.DataTableInfo.DataTableInfo[12]\" \"Object.DataTableInfo.DataTableInfo[13]\" "
-Character=
-Pawn=
+Character="\"Object.animations.animations_movement\" \"Object.animations.animations_dash\" \"Object.animations.DataTable_Attacks\" \"Object.animations.DataTable_Attacks.DataTable_Attacks[13]\" \"Object.animations.animations_auxWeapon\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
+Pawn="\"Object.animations.animations_movement\" \"Object.animations.animations_dash\" \"Object.animations.DataTable_Attacks\" \"Object.animations.DataTable_Attacks.DataTable_Attacks[13]\" \"Object.animations.animations_auxWeapon\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 Enemy_BP_C="\"Object.Enemy\" \"Object.Enemy\" "
 BasePlayer_BP_C=
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
@@ -3900,7 +3901,7 @@ TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Ob
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush=
 Engine="\"Object.Timecode.DefaultTimecodeFrameRate\" "
 UserInterfaceSettings="\"Object.DPI Scaling.UIScaleCurve\" "
 ImgMediaSettings="\"Object.General.DefaultFrameRate\" "
@@ -4002,7 +4003,7 @@ abp_bonnie_C=
 test_C=
 abp_gauntlets_C=
 SkinnedMeshComponent="\"Object.SkeletalMesh\" "
-bp_baseChar_C=
+bp_baseChar_C="\"Object.animations.animations_movement\" \"Object.animations.animations_dash\" \"Object.animations.DataTable_Attacks\" \"Object.animations.DataTable_Attacks.DataTable_Attacks[13]\" \"Object.animations.animations_auxWeapon\" \"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
 SkeletalMeshComponent="\"Object.SkeletalMesh\" "
 BoxComponent=
 REINST_bp_baseChar_C_108="\"Object.Character\" \"Object.Character.Mesh.Object.Rendering.OverrideMaterials\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Input\" "
